Fixed z-index bug with settings menu on small resolutions.

--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -20,12 +20,14 @@ div, span, input, select {
 	&.closed {
 		max-height: 0px;
 		opacity: 0;
+		z-index: -1000;
 	}
 
 	&.open {
 		max-height: auto;
 		align-self: stretch;
 		opacity: 1;
+		z-index: 9000000000001;
 	}
 
 	& > div {
