--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -108,7 +108,6 @@ footer {
 
 #settings_menu {
 	background: $primary-blue;
-	z-index: 9000000001;
 }
 
 #settings_header {
@@ -191,7 +190,7 @@ h3 {
 
 .division > .name {
 	text-align: center;
-	font-size: 21px;
+	font-size: 24px;
 	border-bottom: 3px inset;
 	padding: 3px 0px;
 	margin: 0px auto;
